# Polynomial-

./: BasisFunctionsSets.h  CMakeLists.txt  CompanionMatrix.h  Makefile  Math.h  Polynomial.hpp  SparseFunction.h  SparseFunctionStruct.h  Timer.h  Vector.h  main.cpp
Polynomial/: Polynomial.hpp
Polynomial.xcodeproj/: project.pbxproj
Polynomial.xcodeproj/project.xcworkspace/xcuserdata/keyneshdongol.xcuserdatad/: UserInterfaceState.xcuserstate
Polynomial.xcodeproj/xcuserdata/keyneshdongol.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Polynomial.xcodeproj/xcuserdata/keyneshdongol.xcuserdatad/xcschemes/: xcschememanagement.plist
